@@ -2,6 +2,8 @@ CHANGES IN VERSION 1.3.1
 ------------------------
  o Reporting total number of peptides in dbUniquePeptideSet.
    Fixes issue #41. <2013-05-13 Mon>
+ o New mergedEMRTs arg in findEMRTs. 
+   Closes issue #38. <2013-05-13 Mon> 
 
 CHANGES IN VERSION 1.3.0
 ------------------------
